###############################################################################
#
# ftgl
# CMakeLists.txt
#
# Howard N Smith (howard@blacktriangles.com)
# February 19, 2016
# (c) blacktriangles 2016 (http://www.blacktriangles.com)
###############################################################################

cmake_minimum_required( VERSION 3.4.0 )

project( ftgl )

add_subdirectory( src )
add_subdirectory( demo )